2006-10-10  Ethan A Merritt  <merritt@u.washington.edu>

	* m4/alpha.m4:  Have the new macro use __alpha as the basis for the
	test.  Checked on Digital Unix 4.0D and Tru64 V5.1

	* term/svg.trm (SVG_put_text): Fix bracket scope error introduced
	on 3 Oct.

2006-10-10  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* m4/alpha.m4: New macro GP_ALPHA.  Try to auto-detect if compiler
	targets DEC Alpha/AXP CPU.  If so, add -mieee or -ieee flag to
	CFLAGS to avoid FPU weirdness.

	* configure.in (GP_ALPHA): Call new macro.

2006-10-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.h src/gplt_x11.c term/x11.trm: Code cleanup.
	Assign separate protocol keys and disentangle the code supporting
	binary/ascii descriptions of color and polygons passed by the x11
	driver to gnuplot_x11.   Patchset #1549408

2006-10-08  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/term.c term/driver.h: Remove dead code and comments

2006-10-08  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* docs/gnuplot.doc (set key): Fix gotcha in list of alignment 
	options in 'at <position>' case.

2006-10-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (change_term): For backward compatibility, allow
	"set term X" as shorthand for "set term x11".

2006-10-04  Ethan A Merritt  <merritt@u.washington.edu>

	* tutorial/eg7.plt: Make sure no local encoding is in effect, since
	the corresponding TeX package is probably not going to be loaded.

	* term/post.trm (PS_vector): Fix breakage introduced by Bugfix #1542050
	The path length must not be set to 0 without issuing a stroke command,
	otherwise the current path may never be flushed at all.

2006-10-03  Daniel Sebald  <daniel.sebald@ieee.org>

	* demo/borders.dem: Place all 16 plots on one multiplot.

	* demo/all.dem: Put borders.dem inside all.dem.

2006-10-03  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/version.c: Changed date, version and patchlevel.
